chore: finished working on the swagger setup
