# main.go
@@ -3,35 +3,27 @@ package main
 import (
 	"fmt"
 
-	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/swagger"
 
+	"github.com/gofiber/fiber/v2"
+
+	"example/sub-alert-server/controllers"
 	_ "example/sub-alert-server/docs"
 )
 
-// @title Fiber Example API
+// @title Subscription Alerts And Tracker API
 // @version 1.0
-// @description Sample Swagger for Fiber
-// @host localhost:8080
+// @description This is the API Documentation for the subscription alerts and tracking server
 // @BasePath /
-type User struct {
-	ID   int    `json:"id"`
-	Name string `json:"name"`
-	Age  int    `json:"age"`
-}
-
-var users = []User{
-	{ID: 1, Name: "Benson", Age: 25},
-}
-
 func main() {
 	app := fiber.New()
 
-  app.Get("/swagger/*", swagger.HandlerDefault)
-	app.Get("/users", func(c *fiber.Ctx) error {
-		return c.JSON(users)
-	})
+	app.Get("/swagger/*", swagger.HandlerDefault)
+	
+	app.Get("/users", controllers.GetUsers)
+	app.Get("/user", controllers.GetUser)
 
-	fmt.Println("🚀 Server running on http://localhost:8080/swagger")
+
+	fmt.Println("🚀 Server running on http://localhost:8080/swagger/index.html")
 	app.Listen(":8080")
 }
